<resources>
  <!-- Common -->
  <string name="app_name">Envelop</string>
  <string name="back">Back</string>
  <string name="close">Close</string>
  <string name="cancel">Cancel</string>
  <string name="menu">Menu</string>
  <string name="update">Update</string>
  <string name="confirm">Are you sure?</string>

  <!-- Login -->
  <string name="login_title">Sign in on Envelop</string>
  <string name="login_tagline">Share private files easily,\nwithout losing their ownership.</string>
  <string name="login_button">Sign in with Blockstack</string>
  <string name="login_progress">Signing in</string>
  <string name="login_error">Error signing in with Blockstack</string>
  <string name="login_username_error">You don\'t have a final username yet, check your ID on the Blockstack browser.</string>
  <string name="login_informer">If you don\'t have a Blockstack account, it will create you one for free. There would be no spam and your data will not be tracked.</string>
  <string name="dismiss">Dismiss</string>
  <string name="learn_more">Learn More</string>
  <string name="learn_more_url">https://blog.blockstack.org/see-the-stacks-co-blog-for-latest-stacks-ecosystem-updates/</string>
  <string name="sign_up_warning_message">Blockstack is currently updating their services, as such creating new accounts is temporarily unavailable.
.</string>

  <!-- Main -->
  <string name="main_title">Your Files</string>
  <string name="main_empty">Upload your file</string>
  <string name="main_refresh_error">Error refreshing files</string>
  <string name="main_username">username</string>
  <string name="main_feedback">Send us feedback</string>
  <string name="main_faq">FAQ</string>
  <string name="main_feedback_email_subject">Envelop feedback</string>
  <string name="logout">Logout</string>

  <!-- FAQs -->
  <string name="faq_title">FAQs</string>
  <string name="faq_host_not_found">The FAQs web page could not be loaded.</string>

  <!-- Donate -->
  <string name="donate_tagline">
    Thank you for considering donating to Envelop!
    Envelop is a free and open source app that enables private file sharing for everyone.
    It doesn\'t compromise on your privacy, nor track or spam you.\n\n
    Every donation helps us maintain and further improve Envelop.
    Let\'s build a better Internet!
  </string>
  <string name="donate">Make a donation</string>
  <string name="donate_bitcoin">Donate Crypto</string>
  <string name="donate_stacks">Donate Stacks</string>
  <string name="donate_paypal">Donate w/ Paypal</string>

  <!-- Upload -->
  <string name="upload_title">Envelop Upload</string>
  <string name="upload">Upload</string>
  <string name="preparing_upload">Preparing file upload</string>
  <string name="upload_error">Error uploading file</string>
  <string name="uploading">Uploading</string>
  <string name="uploaded">File uploaded!</string>
  <plurals name="uploading_files_notification">
    <item quantity="one">Uploading %d file</item>
    <item quantity="other">Uploading %d files</item>
  </plurals>
  <string name="share_recommendations">
    This file is now accessible to anyone with this link.
    Be careful sharing it, and delete the file once it’s no longer needed.
  </string>

  <string name="upload_notification_channel">@string/upload</string>
  <string name="upload_notification_channel_description">File uploading</string>

  <!-- Doc -->
  <string name="doc_link">Link</string>
  <string name="doc_copy_link">Copy link</string>
  <string name="doc_copy_link_done">Link copied to clipboard</string>
  <string name="doc_share">Share</string>
  <string name="doc_share_link">Share link</string>
  <string name="doc_share_chooser">Share file link</string>
  <string name="doc_open_download">Open download link</string>
  <string name="doc_delete">Delete file</string>
  <string name="doc_delete_message">Links shared to this file will no longer work.</string>
  <string name="doc_deleting">Deleting file</string>
  <string name="doc_delete_error">Error deleting file. Please try again.</string>
  <string name="doc_cannot_delete_title">Can\'t delete file</string>
  <string name="doc_cannot_delete_message">
    This file was uploaded on a more recent version of Envelop.
    Please update your app to be able to delete your file.
  </string>

  <!-- Time -->

  <string name="now">now</string>
  <plurals name="min">
    <item quantity="one">%d min</item>
    <item quantity="other">%d mins</item>
  </plurals>
  <plurals name="hour">
    <item quantity="one">%d hour</item>
    <item quantity="other">%d hours</item>
  </plurals>

</resources>
