<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  >
  <item
    android:icon="@drawable/ic_more"
    android:title="@string/menu"
    app:showAsAction="ifRoom"
    >
    <menu>
      <item
        android:id="@+id/user"
        android:enabled="false"
        android:title="@string/main_username"
        app:showAsAction="withText"
        />
      <item
        android:id="@+id/faq"
        android:title="@string/main_faq"
        app:showAsAction="withText"
        />
      <item
        android:id="@+id/feedback"
        android:title="@string/main_feedback"
        app:showAsAction="withText"
        />
      <item
        android:id="@+id/donate"
        android:title="@string/donate"
        app:showAsAction="withText"
        />
      <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="withText"
        />
    </menu>
  </item>
</menu>
