<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.login.LoginActivity"
  >

  <include layout="@layout/shared_appbar" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <ImageView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:contentDescription="@string/app_name"
      android:scaleType="centerInside"
      android:src="@drawable/login_logo"
      />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="48dp"
      android:layout_marginEnd="48dp"
      android:gravity="center_horizontal"
      android:text="@string/login_tagline"
      android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
      />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="48dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="48dp"
      android:backgroundTint="@color/blockstack"
      android:padding="16dp"
      android:text="@string/login_button"
      android:textColor="@color/colorOnSecondary"
      android:textSize="16sp"
      app:icon="@drawable/ic_blockstack"
      app:iconGravity="start"
      app:iconPadding="8dp"
      app:iconTint="@color/colorOnSecondary"
      />
  </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>